   - Put the hide-warnings utility in the tools/* folder.
   - Made exceptions derive from our libexcept::exception_t class.
   - Moved the version declaration in a separate header.
   - Bumped version to 2.0 (it won't exactly be compatible with 1.x anymore.)
   - Broke up the test in many files to make it easier to manage.
   - Added system options (i.e. --help, --version, ...).
  * Added missing BOOST dependency in the CMakeLists.txt.
  * Added an ./mk script to recompile quickly.
  * Broke up the large advgetopt.cpp single file in many sub-objects/files.
  * Removed the exit() call from the usage() function. Now it returns a string.
  * Added a logger which by defaults prints in stderr.
  * Changed many structures.
  * Added templates to fill the structures with a better chance of testing
    invalid parameters at that time (although without at least C++17 it is
    not complete).
  * Added a coverage script.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 13 May 2019 00:03:40 -0800

advgetopt (1.1.15.0~xenial) xenial; urgency=high

  * Moved the CMAKE_MODULE_PATH change to the main CMakeLists.txt.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 22 Apr 2019 01:58:52 -0800

advgetopt (1.1.14.1~xenial) xenial; urgency=high

  * Bump version to get a recompile on launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 27 Jul 2018 00:45:54 -0800

advgetopt (1.1.14.0~xenial) xenial; urgency=high

  * Made code -Weffc++ compatible.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 25 Jul 2018 14:31:25 -0800

advgetopt (1.1.13.3~xenial) xenial; urgency=high

  * Bump version to recompile without the -fsanitizer flags.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 27 Jun 2018 19:46:10 -0800

advgetopt (1.1.13.2~xenial) xenial; urgency=high

  * Bump version to recompile with the -fsanitizer flags.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 26 Jun 2018 20:03:27 -0800

advgetopt (1.1.13.1~xenial) xenial; urgency=high

  * Fixed the protocol to the snapwebsites.org.
