@@ -8,6 +8,7 @@ Build-Depends: cmake,
     libboost-dev,
     libexcept-dev (>= 1.1.0.0~xenial),
     libutf8-dev (>= 1.0.0.0~xenial),
+    snapcatch2 (>= 2.7.2.10~xenial),
     snapcmakemodules (>= 1.0.35.3~xenial),
     snapdev (>= 1.0.0.0~xenial)
 Standards-Version: 3.9.4
