@@ -8,6 +8,7 @@ advgetopt (2.0.0.0~xenial) xenial; urgency=high
    - Bumped version to 2.0 (it won't exactly be compatible with 1.x anymore.)
    - Broke up the test in many files to make it easier to manage.
    - Added system options (i.e. --help, --version, ...).
+  * Updated the tests to work with snapcatch2.
   * Added missing BOOST dependency in the CMakeLists.txt.
   * Added an ./mk script to recompile quickly.
   * Broke up the large advgetopt.cpp single file in many sub-objects/files.
